fix(SocialMedia): correct selector for Jumpers Heaven icon

--- a/src/components/Footer/FooterContent/SocialMedia/SocialMedia.module.scss
+++ b/src/components/Footer/FooterContent/SocialMedia/SocialMedia.module.scss
@@ -67,7 +67,7 @@
   transition: fill .2s ease;
 }
 
-.socialMediaNav ul li a[data-icon=jumpersHeaven] svg {
+.socialMediaNav ul li a[data-icon=jumpers-heaven] svg {
   position: relative;
   top: 1px;
   width: 32px;
